--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.41"
+    "axios": "^1.1.3",
+    "pinia": "^2.0.23",
+    "vue": "^3.2.41",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
+    "naive-ui": "^2.33.5",
     "typescript": "^4.6.4",
+    "vfonts": "^0.1.0",
     "vite": "^3.2.0",
     "vue-tsc": "^1.0.9"
   }
