--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@arco-design/web-vue": "^2.38.1",
     "@vitejs/plugin-vue": "^3.2.0",
-    "naive-ui": "^2.33.5",
     "typescript": "^4.6.4",
-    "vfonts": "^0.1.0",
     "vite": "^3.2.0",
     "vue-tsc": "^1.0.9"
   }
